# mit-hrtf-lib

./: .gitignore  CMakeLists.txt  README.md
include/: mit_hrtf_lib.h
mac/mit_hrtf_lib.xcodeproj/: project.pbxproj
mac/mit_hrtf_lib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/mit_hrtf_lib.xcodeproj/xcuserdata/aristotel.xcuserdatad/xcschemes/: mit_hrtf_lib.xcscheme  xcschememanagement.plist
source/: mit_hrtf_lib.c
win/: mit_hrtf_lib.sln  mit_hrtf_lib.vcproj  mit_hrtf_lib.vcxproj
